syntax = "proto3";
package douyin.core;

// 定义Java相关
option java_multiple_files = true;
option java_package = "com.xty.dubbo_gen.user";
option java_outer_classname = "UserServiceProto";

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

message UserRegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message UserRegisterResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message UserLoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message UserLoginResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message UserInfoRequest {
  int64 from_user_id = 1; // 调用者id
  int64 to_user_id = 2; // 被调用方id
}

message UserInfoResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  User user = 3; // 用户信息
}

message UserInfoByNameRequest {
  string username = 1; // 用户名
}

message UserInfoByNameResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string password = 4;
}

message UserExitsRequest {
  string username = 1;
}

message UserExistsResponse {
  bool exist = 1;
}

service UserService {
  rpc Register (UserRegisterRequest) returns (UserRegisterResponse) {};
  rpc Login (UserLoginRequest) returns (UserLoginResponse) {};
  rpc GetUserInfo (UserInfoRequest) returns (UserInfoResponse) {};
}
